# hurlalot_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yaml  hurl.env.test  install_prerequisites_docker_alpine.sh  justfile
.github/workflows/: build.yml
api/: health.hurl  parse.hurl  valid_hurl.json
src/: main.rs
src/api/: mod.rs
src/hurl_ext/: mod.rs
