[package]
name = "hurlalot"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json", "http2", "uuid"] }
shuttle-rocket = "0.29.0"
shuttle-runtime = "0.29.0"
tokio = "1.26.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hurl_core4 = {package = "hurl_core", version = "4.1.0"}

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }